--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           <h2 class="main-h visually-hidden">we are</h2>
           <ul class="section-list list">
             <li class="list-item">
+              <div class="icon-container">
+                <svg class="icon-we-are" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="main-heading we-are-h">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-container">
+                <svg class="icon-we-are" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="main-heading we-are-h">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-container">
+                <svg class="icon-we-are" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="main-heading we-are-h">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-container">
+                <svg class="icon-we-are" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="main-heading we-are-h">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -146,7 +166,39 @@
               />
               <div class="team-name-container">
                 <h3 class="main-heading team-h">Mark Guerrero</h3>
-                <p class="section-text">Product Designer</p>
+                <p class="section-text team-text">Product Designer</p>
+
+                <!-- social-icon -->
+                <ul class="social list">
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item team-properties">
@@ -158,7 +210,37 @@
               />
               <div class="team-name-container">
                 <h3 class="main-heading team-h">Tom Ford</h3>
-                <p class="section-text">Frontend Developer</p>
+                <p class="section-text team-text">Frontend Developer</p>
+                <ul class="social list">
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item team-properties">
@@ -170,7 +252,37 @@
               />
               <div class="team-name-container">
                 <h3 class="main-heading team-h">Camila Garcia</h3>
-                <p class="section-text">Marketing</p>
+                <p class="section-text team-text">Marketing</p>
+                <ul class="social list">
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item team-properties">
@@ -182,7 +294,37 @@
               />
               <div class="team-name-container">
                 <h3 class="main-heading team-h">Daniel Wilson</h3>
-                <p class="section-text">UI Designer</p>
+                <p class="section-text team-text">UI Designer</p>
+                <ul class="social list">
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link">
+                      <svg class="social-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -190,7 +332,8 @@
       </section>
     </main>
     <footer class="main-footer-section">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-content-container">
         <a class="footer-logo link" href="./index.html"
           >Web<span class="footer-studio">Studio</span></a
         >
@@ -198,6 +341,40 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="social-media-container">
+        <h3 class="social-media-heading">Social media</h3>
+        <ul class="social list">
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
       </div>
     </footer>
   </body>
