--- a/index.html
+++ b/index.html
@@ -330,7 +330,40 @@
           </ul>
         </div>
       </section>
+      <!-- customers section  -->
+      <section class="section-customers section ">
+        <div class="container">
+          <h2 class="main-h">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo-1"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo-2"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo-3"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo-4"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link">
+              <svg class="sprite-icon" width="104" height="56">
+              <use href="./images/icons.svg#icon-Logo-5"></use>
+            </svg></a></li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <!-- footer -->
     <footer class="main-footer-section">
       <div class="container footer-container">
         <div class="footer-content-container">
