--- a/portfolio.html
+++ b/portfolio.html
@@ -213,17 +213,50 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="portfolio-footer">
-      <div class="container">
-        <div class="footer-h">
-          <a class="footer-logo link" href="./index.html"
-            >Web<span class="footer-studio">Studio</span></a
-          >
-        </div>
+    <footer class="main-footer-section">
+      <div class="container footer-container">
+        <div class="footer-content-container">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-studio">Studio</span></a
+        >
         <p class="section-text text-footer">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="social-media-container">
+        <h3 class="social-media-heading">Social media</h3>
+        <ul class="social list">
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-social-link">
+              <svg class="social-icon" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
       </div>
     </footer>
   </body>
