--- a/index.html
+++ b/index.html
@@ -170,28 +170,28 @@
 
                 <!-- social-icon -->
                 <ul class="social list">
-                  <li>
+                  <li class="social-item class="social-item"">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item class="social-item"">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item class="social-item"">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item class="social-item"">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -212,28 +212,28 @@
                 <h3 class="main-heading team-h">Tom Ford</h3>
                 <p class="section-text team-text">Frontend Developer</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -254,28 +254,28 @@
                 <h3 class="main-heading team-h">Camila Garcia</h3>
                 <p class="section-text team-text">Marketing</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -296,28 +296,28 @@
                 <h3 class="main-heading team-h">Daniel Wilson</h3>
                 <p class="section-text team-text">UI Designer</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
