--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">                   
+                  <li class="social-item">
                     <a class="social-link">
                       <svg class="social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
@@ -332,34 +332,46 @@
         </div>
       </section>
       <!-- customers section  -->
-      <section class="section-customers section ">
+      <section class="section-customers section">
         <div class="container">
           <h2 class="main-h">Customers</h2>
           <ul class="customers-list list">
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo"></use>
-            </svg></a></li>
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-1"></use>
-            </svg></a></li>
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-2"></use>
-            </svg></a></li>
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-3"></use>
-            </svg></a></li>
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-4"></use>
-            </svg></a></li>
-            <li class="customers-item"><a href="" class="customers-link">
-              <svg class="sprite-icon" width="104" height="56">
-              <use href="./images/icons.svg#icon-Logo-5"></use>
-            </svg></a></li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo"></use></svg>
+             </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-1"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-2"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-3"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-4"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="sprite-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-5"></use></svg>
+             </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -367,48 +379,50 @@
     <!-- footer -->
     <footer class="main-footer-section">
       <div class="container footer-container">
+        <!-- content  -->
         <div class="footer-content-container">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <p class="section-text text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social-media-container">
-        <h3 class="social-media-heading">Social media</h3>
-        <ul class="social list">
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <p class="section-text text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <!-- social media  -->
+        <div class="social-media-container">
+          <p class="social-media-heading">Social media</p>
+          <ul class="social-footer-list list">
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg class="social-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg class="social-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg class="social-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg class="social-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
