--- a/index.html
+++ b/index.html
@@ -172,28 +172,28 @@
                 <ul class="social list">
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -214,28 +214,28 @@
                 <ul class="social list">
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -256,28 +256,28 @@
                 <ul class="social list">
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -299,28 +299,28 @@
                 <ul class="social list">
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link">
-                      <svg class="social-icon" width="16px" height="16px">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
