--- a/portfolio.html
+++ b/portfolio.html
@@ -215,48 +215,50 @@
     <!-- footer -->
     <footer class="main-footer-section">
       <div class="container footer-container">
+        <!-- content  -->
         <div class="footer-content-container">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <p class="section-text text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social-media-container">
-        <h3 class="social-media-heading">Social media</h3>
-        <ul class="social list">
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="footer-social-link">
-              <svg class="social-icon" width="16px" height="16px">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <p class="section-text text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <!-- social media  -->
+        <div class="social-media-container">
+          <p class="social-media-heading">Social media</p>
+          <ul class="social-footer-list list">
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg width="24px" height="24px" class="social-icon" >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg width="24px" height="24px"class="social-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg  width="24px" height="24px" class="social-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a class="footer-social-link">
+                <svg width="24px" height="24px" class="social-icon" >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
