--- a/index.html
+++ b/index.html
@@ -395,28 +395,28 @@
           <ul class="social-footer-list list">
             <li class="social-footer-item">
               <a class="footer-social-link">
-                <svg width="24px" height="24px" class="social-icon" >
+                <svg width="24" height="24" class="social-icon" >
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a class="footer-social-link">
-                <svg width="24px" height="24px"class="social-icon">
+                <svg width="24" height="24"class="social-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a class="footer-social-link">
-                <svg  width="24px" height="24px" class="social-icon">
+                <svg  width="24" height="24" class="social-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a class="footer-social-link">
-                <svg width="24px" height="24px" class="social-icon" >
+                <svg width="24" height="24" class="social-icon" >
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
