--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           <!-- portfolio section -->
           <ul class="portfolio-list card-set list">
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img1.jpg"
                   width="360"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img2.jpg"
                   width="360"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img3.jpg"
                   width="360"
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img4.jpg"
                   width="360"
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img5.jpg"
                   width="360"
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img6.jpg"
                   width="360"
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img7.jpg"
                   width="360"
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img8.jpg"
                   width="360"
@@ -195,7 +195,7 @@
               </a>
             </li>
             <li class="portfolio-item card-item">
-              <a class="portfolio-link link"
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/portfolio-section/img9.jpg"
                   width="360"
